--- a/journals.html
+++ b/journals.html
@@ -99,6 +99,7 @@
                   <li><i class="bx bx-chevron-right"></i> <a href="#">About Us</a></li>
                   <li><i class="bx bx-chevron-right"></i> <a href="#">Contact</a></li>
                 </ul>
+                <a href="#"><button class="btn py-1, px-3 text-white" data-bs-toggle="modal" data-bs-target="#exampleModal" style="background-color: #FCA433;"><span class="iconify-inline mx-1" data-icon="eos-icons:admin-outlined" style="color: white;"></span>Admin</button></a>
               </div>
     
     
@@ -118,6 +119,30 @@
         </div>
       </footer><!-- End Footer -->
 
+ <!-- Modal -->
+ <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Admin Access</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <div class="container d-flex justify-content-center align-items-center flex-column">
+          <input type="text" class="admin-login-texbox mt-3 px-2 py3" placeholder="Enter Username">
+          <input type="password" class="admin-login-texbox-pass mt-3 px-2 py3" placeholder="Enterpassword">
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button"  style="background-color: #FCA433;" class="btn Access-btn text-white">Access</button>
+
+        <a href="./new.html" class="next-btn"></a>
+      </div>
+    </div>
+  </div>
+</div>
+
 <div id="preloader"></div>
 <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
   
@@ -133,6 +158,7 @@
   <script src="assets/vendor/php-email-form/validate.js"></script>
   
   <!-- Main JS File -->
+  <script src="./modal.js"></script>
   <script type="module" src="./fire.js"></script>
   <script type="module" src="./journal.js"></script>
   
