adding social links

--- a/index.html
+++ b/index.html
@@ -95,7 +95,16 @@ Ranging from
 We cover practically everything - professional advice, editing, cover design, layout, e-book conversion, and lots more. With over 30 years of experience, 
 proven credibility, top-notch creativity and quality, we are merely a phone call away to handling your book extremely personally and professionally.
                   </p>
-                  <a href="#" class="btn-learn-more">Learn More</a>
+                  <h4>Connect with us</h4>
+                  <div class="d-flex align-items-center">
+                    <a href="https://linktr.ee/Fabedu" class="btn-learn-more">Learn More</a>
+
+                    <div class="soc-links">
+                      
+                      <a href="https://www.facebook.com/Fab-Educational-Books-Nig-Ltd-108045368267594/" class="ms-4 facebook"><i class="bx bxl-facebook"></i></a>
+                      <a href="https://instagram.com/fabsedubooks?utm_medium=copy_link" class="ms-2 instagram"><i class="bx bxl-instagram"></i></a>
+                    </div>
+                  </div>
                 </div>
               </div>
       
@@ -190,10 +199,8 @@ proven credibility, top-notch creativity and quality, we are merely a phone call
               </p>
               <div class="social-links mt-3">
                 <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-                <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                <a href="https://www.facebook.com/Fab-Educational-Books-Nig-Ltd-108045368267594/" class="facebook"><i class="bx bxl-facebook"></i></a>
+                <a href="https://instagram.com/fabsedubooks?utm_medium=copy_link" class="instagram"><i class="bx bxl-instagram"></i></a>
               </div>
             </div>
           </div>
