--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ Ranging from
                   <ul>
                     <li><i class="ri-check-double-line"></i>poetry anthologies, fiction, non-fiction,</li>
                     <li><i class="ri-check-double-line"></i> journals, science texts, history text.</li>
-                    <li><i class="ri-check-double-line"></i>inspirational books and professional development</li>
+                    <li><i class="ri-check-double-line"></i>inspirational books and professional development books</li>
                   </ul>
                 </div>
                 <div class="col-lg-6 pt-4 pt-lg-0">
