changes to text

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ proven credibility, top-notch creativity and quality, we are merely a phone call
 
           <div class="col-lg-8 col-md-6">
             <div class="footer-info">
-              <h3>FAB Education Books Nig. Ltd.</h3>
+              <h3>FAB EDUCATIONAL BOOKS NIG. LTD.</h3>
               
                 Stanford Road, Aroma Awka, <br>
                 Anambra State, Nigeria<br><br>
