making changes to text

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="carousel-item active" style="background-image: url(./assets/css/Background.jpg)">
               <div class="carousel-container">
                 <div class="container">
-                  <h2 class="animate__animated animate__fadeInDown">Welcome to <span>FAB Educational Books Nig. Ltd.</span></h2>
+                  <h2 class="animate__animated animate__fadeInDown">Welcome to <span>FAB EDUCATIONAL BOOKS NIG. LTD.</span></h2>
                   <p class="animate__animated animate__fadeInUp">Get a range of learning and teaching resources
                     from award winning fiction to National approved educational texts.</p>
                   <a href="./books.html" class="btn-get-started animate__animated animate__fadeInUp scrollto"><span class="iconify-inline mx-1" data-icon="icomoon-free:books" style="color: white;"></span></i>Our Books</a>
