--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ proven credibility, top-notch creativity and quality, we are merely a phone call
                   <div class="info-box">
                     <i class="bx bx-map"></i>
                     <h3>Our Address</h3>
-                    <p>Fab Anieh House, 89 Club Road, Opp. Ibiza Club House, <br> Okpuno-Awka, Anambra State.</p>
+                    <p>Fab Anieh House, 89 Club Road, Opp. Ibiza Club House, <br> Okpuno-Awka, Anambra State. Nigeria</p>
                   </div>
                 </div>
                 <div class="col-md-6">
@@ -177,7 +177,7 @@ proven credibility, top-notch creativity and quality, we are merely a phone call
   
       <div class="mapouter">
         <div class="gmap_canvas"><iframe width="100%" height="300"
-           id="gmap_canvas" src="https://maps.google.com/maps?q=Ibiza%20Club%20House,%20Okpuno-Awka,%20Anambra%20State.&t=&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
+           id="gmap_canvas" src="https://maps.google.com/maps?q=ibiza%20Okpuno-Awka,%20Anambra%20State.&t=&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
           </iframe>
           </div>
         </div>
@@ -194,7 +194,7 @@ proven credibility, top-notch creativity and quality, we are merely a phone call
               <h3>FAB EDUCATIONAL BOOKS NIG. LTD.</h3>
                 Fab Anieh House, 89 Club Road, Opp. <br> 
                 Ibiza Club House,
-                Okpuno-Awka, Anambra State. <br>
+                Okpuno-Awka, Anambra State. Nigeria<br>
                 
                 <strong>Phone:</strong> 08035619395<br>
                 <strong>Email:</strong> fabedubookscentre@gmail.com<br>
